@@ -39,37 +39,37 @@
 -000009  point: type=line comment=block hier=top.t
 %000009         {intf_sel_ff.foo, intf_sel_ff.bar, intf_sel_ff.baz} <=
 -000009  point: type=line comment=block hier=top.t
-%000009             cyc[0] ?
--000009  point: type=branch comment=cond_then hier=top.t
-%000009             {intfs[1].foo, intfs[1].bar, intfs[1].baz} :
--000009  point: type=branch comment=cond_then hier=top.t
--000009  point: type=branch comment=cond_else hier=top.t
-%000009             {intfs[0].foo, intfs[0].bar, intfs[0].baz};
--000009  point: type=branch comment=cond_else hier=top.t
+%000005             cyc[0] ?
+-000005  point: type=branch comment=cond_then hier=top.t
+%000005             {intfs[1].foo, intfs[1].bar, intfs[1].baz} :
+-000005  point: type=branch comment=cond_then hier=top.t
+-000004  point: type=branch comment=cond_else hier=top.t
+%000004             {intfs[0].foo, intfs[0].bar, intfs[0].baz};
+-000004  point: type=branch comment=cond_else hier=top.t
             end
         
  000010     always_comb begin
 +000010  point: type=line comment=block hier=top.t
  000010         {intf_sel_comb.foo, intf_sel_comb.bar, intf_sel_comb.baz} =
 +000010  point: type=line comment=block hier=top.t
- 000010             cyc[0] ?
-+000010  point: type=branch comment=cond_then hier=top.t
- 000010             {intfs[1].foo, intfs[1].bar, intfs[1].baz} :
-+000010  point: type=branch comment=cond_then hier=top.t
-+000010  point: type=branch comment=cond_else hier=top.t
- 000010             {intfs[0].foo, intfs[0].bar, intfs[0].baz};
-+000010  point: type=branch comment=cond_else hier=top.t
+%000005             cyc[0] ?
+-000005  point: type=branch comment=cond_then hier=top.t
+%000005             {intfs[1].foo, intfs[1].bar, intfs[1].baz} :
+-000005  point: type=branch comment=cond_then hier=top.t
+-000005  point: type=branch comment=cond_else hier=top.t
+%000005             {intfs[0].foo, intfs[0].bar, intfs[0].baz};
+-000005  point: type=branch comment=cond_else hier=top.t
             end
         
             assign
                 {intf_sel_assign.foo, intf_sel_assign.bar, intf_sel_assign.baz} =
- 000010             cyc[0] ?
-+000010  point: type=branch comment=cond_then hier=top.t
- 000010             {intfs[1].foo, intfs[1].bar, intfs[1].baz} :
-+000010  point: type=branch comment=cond_then hier=top.t
-+000010  point: type=branch comment=cond_else hier=top.t
- 000010             {intfs[0].foo, intfs[0].bar, intfs[0].baz};
-+000010  point: type=branch comment=cond_else hier=top.t
+%000005             cyc[0] ?
+-000005  point: type=branch comment=cond_then hier=top.t
+%000005             {intfs[1].foo, intfs[1].bar, intfs[1].baz} :
+-000005  point: type=branch comment=cond_then hier=top.t
+-000005  point: type=branch comment=cond_else hier=top.t
+%000005             {intfs[0].foo, intfs[0].bar, intfs[0].baz};
+-000005  point: type=branch comment=cond_else hier=top.t
         
 %000009     always @ (posedge clk) begin
 -000009  point: type=line comment=block hier=top.t
